--- a/imagepager/src/main/res/layout/activity_viewpager.xml
+++ b/imagepager/src/main/res/layout/activity_viewpager.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/container"
     android:background="@android:color/black"
     android:orientation="vertical">
 
@@ -17,7 +17,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/btnBack"
+            android:id="@+id/btnClose"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_alignParentLeft="true"
@@ -41,7 +41,7 @@
         android:layout_height="30dp"
         android:layout_alignParentBottom="true"
         android:gravity="center_horizontal|top"
-        android:visibility="gone"
-        android:orientation="horizontal"></LinearLayout>
+        android:orientation="horizontal"
+        android:visibility="gone"></LinearLayout>
 
 </RelativeLayout>
