--- a/imagepager/src/main/res/layout/activity_imageview.xml
+++ b/imagepager/src/main/res/layout/activity_imageview.xml
@@ -4,7 +4,7 @@
     android:background="@android:color/black"
     android:orientation="vertical">
 
-    <ImageView
+    <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/imageContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
