--- a/imagepager/src/main/res/layout/activity_viewpager.xml
+++ b/imagepager/src/main/res/layout/activity_viewpager.xml
@@ -5,7 +5,12 @@
     android:background="@android:color/black"
     android:orientation="vertical">
 
-    <com.kkensu.www.imagepager.PhotoViewPager
+    <!--    <com.kkensu.www.imagepager.PhotoViewPager-->
+    <!--        android:id="@+id/viewPager"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent" />-->
+
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
