--- a/imagepager/src/main/res/layout/activity_viewpager.xml
+++ b/imagepager/src/main/res/layout/activity_viewpager.xml
@@ -1,14 +1,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black"
     android:orientation="vertical">
-
-    <!--    <com.kkensu.www.imagepager.PhotoViewPager-->
-    <!--        android:id="@+id/viewPager"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="match_parent" />-->
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
@@ -16,7 +13,7 @@
         android:layout_height="match_parent" />
 
     <RelativeLayout
-        android:id="@+id/layoutTop"
+        android:id="@+id/layout_top"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal">
@@ -27,8 +24,30 @@
             android:layout_height="50dp"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:padding="14dp"
-            android:src="@drawable/common_btn_left_white" />
+            android:src="@drawable/ic_nav_close_black"
+            android:tint="@android:color/white" />
+
+        <TextView
+            android:id="@+id/txtTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textColor="@android:color/white"
+            android:textSize="15dp"
+            tools:text="제목" />
+
+        <TextView
+            android:id="@+id/txtPosition"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
+            android:layout_toLeftOf="@+id/btnMore"
+            android:textColor="@android:color/white"
+            android:textSize="15dp"
+            android:visibility="gone"
+            tools:text="1 / 5" />
 
         <ImageView
             android:id="@+id/btnMore"
@@ -37,7 +56,8 @@
             android:layout_alignParentRight="true"
             android:layout_centerInParent="true"
             android:padding="18dp"
-            android:src="@drawable/icon_common_more_dots_vertical_white" />
+            android:src="@drawable/icon_common_more_dots_vertical_white"
+            android:visibility="gone" />
     </RelativeLayout>
 
     <LinearLayout
@@ -47,6 +67,13 @@
         android:layout_alignParentBottom="true"
         android:gravity="center_horizontal|top"
         android:orientation="horizontal"
-        android:visibility="gone"></LinearLayout>
+        android:visibility="gone"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal" />
 
 </RelativeLayout>
